--- a/example/index.html
+++ b/example/index.html
@@ -26,9 +26,9 @@
 <script src="../ligerui.all.js"></script>
 <!--<script type="text/javascript" src="demo2.js"></script>-->
 <!--<script type="text/javascript" src="demo2.1.js"></script>-->
-<script type="text/javascript" src="demo1.js"></script>
-<script type="text/javascript" src="treeData.js"></script>
-<script type="text/javascript" src="AllOrdersData.js"></script>
+<!--<script type="text/javascript" src="demo1.js"></script>-->
+<!--<script type="text/javascript" src="treeData.js"></script>-->
+<!--<script type="text/javascript" src="AllOrdersData.js"></script>-->
 
 <script src="../index.js"></script>
 
