--- a/example/index.html
+++ b/example/index.html
@@ -23,7 +23,7 @@
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="../bower_components/class/index.js"></script>
 <script type="text/javascript" src="../bower_components/pager/index.js"></script>
-<script src="../ligerui.all.js"></script>
+<script src="../ligergrid.js"></script>
 <!--<script type="text/javascript" src="demo2.js"></script>-->
 <!--<script type="text/javascript" src="demo2.1.js"></script>-->
 <!--<script type="text/javascript" src="demo1.js"></script>-->
@@ -75,6 +75,8 @@
             dataTotalField:"Total",
             perPager:"iPerPage",
             currentPageField:"iPager",
+            sortColField:"colNames",
+            sortNameField:"sortNames"
         },
 
         height:500,
@@ -98,6 +100,10 @@
     }).on("datagrid:closeDetail",function(){
         console.log(92829393893);
     }).on("datagrid:selectrow",function(){
+        console.log(arguments,"selectrow");
+    }).on("datagrid:changesort",function(){
+        console.log(arguments,"selectrow");
+    }).on("datagrid:xhrsuccess",function(){
         console.log(arguments,"selectrow");
     });
 
