--- a/example/index.html
+++ b/example/index.html
@@ -109,7 +109,7 @@
 //console.log($(detailPanel).parents(".l-grid").first().find(".l-grid2 >.l-grid-body-table"),18723123123819028390);
 //        $(detailPanel).parents(".l-grid").first().find(".l-grid2 > tbody").find(".l-grid-detailpanel-inner").eq(row.__index).append(grid);
         $(detailPanel).append(grid);
-        $(grid).css('margin',10).datagrid({
+        $(grid).css('margin',10).datagrid2({
             columns:
                     [
 
