--- a/example/index.html
+++ b/example/index.html
@@ -176,7 +176,7 @@
             perPager:"iPerPage",
             currentPageField:"iPager",
         },
-        width: '100%',tree: { columnId: 'id1', usePager:false},treeExtend:false
+        width: '100%',tree: { columnId: 'id1'},treeExtend:false
 
     })
 </script>
