--- a/example/index.html
+++ b/example/index.html
@@ -49,7 +49,7 @@
             { display: '公司名', name: 'CompanyName',align:'left' ,frozen:false},
             { display: '联系人', name: 'ContactName' },
             { display: '地址', name: 'Address' },
-            { display: '邮编', name: 'PostalCode' },
+            { display: '邮编', name: 'PostalCode',isSort:false },
             { display: '城市', name: 'City' },
             { display: '操作', name: 'do' ,render:function(){  return  "<input type='text'/>"}}
         ],
