--- a/example/demo4.html
+++ b/example/demo4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../liger-common.css">
-    <link rel="stylesheet" href="../ligerui-grid2.css">
-    <link rel="stylesheet" href="../cus/demo2.css">
+    <link rel="stylesheet" href="../index.css">
+    <!--<link rel="stylesheet" href="../cus/demo2.css">-->
     <!--<link rel="stylesheet" href="../../bower_components/pager/index.css" media="screen" title="no title" charset="utf-8">-->
     <!--<link rel="stylesheet/less" href="../../bower_components/legoland/src/legoland.css" media="screen" title="no title" charset="utf-8">-->
     <title>Title</title>
@@ -48,7 +48,7 @@
         g = $("#maingrid3").ligerGrid({
             columns: [
                 { display: '顾客', name: 'CustomerID', align: 'left' },
-                { display: '公司名', name: 'CompanyName',align:'left' ,frozen:true},
+                { display: '公司名', name: 'CompanyName',align:'left' ,frozen:false},
                 { display: '联系人', name: 'ContactName' },
                 { display: '地址', name: 'Address' },
                 { display: '邮编', name: 'PostalCode' },
