--- a/example/demo4.html
+++ b/example/demo4.html
@@ -33,7 +33,7 @@
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="../../bower_components/class/index.js"></script>
 <script type="text/javascript" src="../../bower_components/pager/index.js"></script>
-<script src="../ligerui.all.js"></script>
+<script src="../ligergrid.js"></script>
 <script type="text/javascript" src="demo2.js"></script>
 <script type="text/javascript" src="demo2.1.js"></script>
 <script type="text/javascript">
