--- a/example/index.html
+++ b/example/index.html
@@ -46,7 +46,7 @@
                 return  '<input type ="checkbox" rowid ="' + row.id + '">';
             }},
             { display: '顾客', name: 'CustomerID', align: 'left' },
-            { display: '公司名', name: 'CompanyName',align:'left' ,frozen:true},
+            { display: '公司名', name: 'CompanyName',align:'left' ,frozen:false},
             { display: '联系人', name: 'ContactName' },
             { display: '地址', name: 'Address' },
             { display: '邮编', name: 'PostalCode',isSort:false },
